Update top page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
   {%- seo -%}
   <!-- <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> -->
   <link rel="stylesheet" href="{{ "/assets/uikit.min.css" | relative_url }}">
+  <script src="assets/uikit.min.js"></script>
+  <script src="assets/uikit-icons.min.js"></script>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
