--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,54 @@
 layout: default
 ---
 
+
+<div class="uk-section uk-light uk-height-viewport uk-background-cover" style="background-image: url(assets/img/hoge.jpg)">
+  <div class="uk-container">
+    <h1>{{ page.cover.head }}</h1>
+  </div>
+</div>
+
+<div class="uk-section uk-light uk-background-primary">
+  <div class="uk-container">
+    <h2>{{ page.abstract.head }}</h2>
+    {{ page.abstract.desc | markdownify }}
+  </div>
+</div>
+
+
+<div class="uk-section">
+  <div class="uk-container">
+    <h2>CoderDojo Utsunomiya の特徴</h2>
+    <div class="uk-grid-match uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid>
+      {%- for feature in page.features -%}
+      <div>
+        <div class="uk-card uk-card-default uk-card-body">
+          <h3>{{ feature.head }}</h3>
+          {{ feature.desc | markdownify }}
+        </div>
+      </div>
+      {%- endfor -%}
+    </div>
+  </div>
+</div>
+
+<div class="uk-section">
+  <div class="uk-container">
+    <h2>CoderDojo ではみんなに役割がある</h2>
+    <div class="uk-grid-match uk-child-width-1-2" uk-grid>
+      {%- for role in page.roles-%}
+      <div>
+        <div class="uk-card uk-card-default uk-card-body">
+          <h3>{{ role.name }}</h3>
+          {{ role.desc | markdownify }}
+        </div>
+      </div>
+      {%- endfor -%}
+    </div>
+  </div>
+</div>
+
+
 <div class="uk-section">
   <div class="uk-container">
     {%- if page.title -%}
