--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <!-- <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> -->
-  <link rel="stylesheet" href="{{ "/assets/uikit.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <script src="assets/uikit.min.js"></script>
   <script src="assets/uikit-icons.min.js"></script>
   {%- feed_meta -%}
