Update top page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,19 +5,22 @@
 <body>
 
 <div>
-  <div class="uk-inline uk-width-1-1 uk-background-cover" style="background-image: url(assets/img/{{ page.cover.image }})" uk-height-viewport="offset-top: true; offset-bottom: true">
-    <h1 class="uk-background-default">
-        <span class="uk-heading-medium cd-logo">CoderDojo Utsunomiya</span><br>
-        <span class="uk-h4">コーダー道場 宇都宮</span>
-    </h1>
-    <div class="uk-position-bottom-right uk-overlay-primary uk-text-meta">
-      CoderDojo Champions' Handbook より
+  <div class="uk-section uk-background-cover" style="position: relative; background-image: url({{ page.cover.image | relative_url }})" uk-height-viewport="offset-top: true; offset-bottom: true">
+    <div class="uk-container">
+      <h1 class="uk-background-default">
+          <span class="uk-heading-medium cd-logo">CoderDojo Utsunomiya</span><br>
+          <span class="uk-h4">コーダー道場 宇都宮</span>
+      </h1>
     </div>
+    {% if page.cover.image_comment %}
+    <div class="uk-position-bottom-right uk-overlay-primary uk-text-meta">
+      {{ page.cover.image_comment }}
+    </div>
+    {% endif %}
   </div>
 
   <div class="uk-section uk-background-primary uk-light">
     <div class="uk-container">
-      <!-- <h2 class="uk-text-center">{{ page.abstract.head }}</h2> -->
       {{ page.abstract.desc | markdownify }}
     </div>
   </div>
@@ -25,66 +28,121 @@
 
 <div class="uk-section">
   <div class="uk-container">
-    <h2>CoderDojo Utsunomiya の特徴</h2>
-    <div class="uk-grid-match uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid>
-      {%- for feature in page.features -%}
-      <div>
-        <div class="uk-card uk-card-default uk-card-body">
-          <h3>{{ feature.head }}</h3>
-          {{ feature.desc | markdownify }}
+    <h2>開催予定</h2>
+    <p>月1回程度のペースで定期的に開催する予定です。</p>
+    <div uk-grid>
+      {% assign notice_posts = site.posts | where: "categories", "dojo-notice" %}
+      {% for post in notice_posts reversed %}
+      <div class="uk-width-1-1">
+        <div class="uk-card">
+          <div class="uk-card-header uk-text-center uk-text-emphasis">
+            <h3 class="uk-card-title uk-heading-medium uk-text-bold uk-margin-remove-bottom">
+              第 {{ post.dojo_num }} 回
+            </h3>
+
+            <p class="uk-text-bold uk-margin-remove">
+            {% if post.dojo_fixed %}
+            <time datetime="{{ post.dojo_date | date: "%F"}}">
+            <span class="cd-big-date">{{ post.dojo_start | date: "%Y"  }}</span>年
+            <span class="cd-big-date">{{ post.dojo_start | date: "%-m" }}</span>月
+            <span class="cd-big-date">{{ post.dojo_start | date: "%-d" }}</span>日
+            <span class="cd-big-date">{{ post.dojo_start | date: "%a"  }}</span>
+            </time>
+            {% else %}
+            <span class="cd-big-date">{{ post.dojo_start | date: "%Y"  }}</span>年
+            <span class="cd-big-date">{{ post.dojo_start | date: "%-m" }}</span>月
+            {% endif %}
+            </p>
+
+            <p class="uk-text-bold uk-text-large uk-margin-remove">
+            {% if post.dojo_fixed %}
+              {{ post.dojo_start | date: "%R" }} - {{ post.dojo_end | date: "%R" }}
+            {% else %}
+              計画中
+            {% endif %}
+            </p>
+            <p class="margin-remove-top uk-margin-remove"><span uk-icon="location"></span>
+              {{ post.dojo_place }}
+            </p>
+          </div>
+
+          <div class="uk-card-body">
+            <p>{{ post.dojo_comment }}</p>
+            <p><a href="{{ post.url | relative_url }}">詳細...</a></p>
+
+            {% if post.dojo_fixed %}
+            <a href="#"><button class="uk-button uk-button-primary">参加</button></a>
+            {% else %}
+            <button class="uk-button uk-button-primary" disabled>参加</button>
+            {% endif %}
+
+          </div>
         </div>
       </div>
-      {%- endfor -%}
+      {% endfor %}
     </div>
   </div>
 </div>
 
 <div class="uk-section">
   <div class="uk-container">
-    <h2>CoderDojo ではみんなに役割がある</h2>
-    <div class="uk-grid-match uk-child-width-1-2" uk-grid>
-      {%- for role in page.roles-%}
-      <div>
-        <div class="uk-card uk-card-default uk-card-body">
-          <h3>{{ role.name }}</h3>
-          {{ role.desc | markdownify }}
+    <h2>NEWS</h2>
+
+    <div uk-grid>
+      {% for post in site.posts %}
+      <div class="uk-width-1-3@m">
+        <a class="uk-link-toggle" href="{{ post.url | relative_url }}">
+        <div class="uk-card uk-card-hover">
+          <div class="uk-card-header uk-background-primary uk-light">
+            <div class="uk-grid-small uk-flex-middle" uk-grid>
+              {% if post.img %}
+              <div class="uk-width-auto">
+                <img class="uk-border-circle" width="40" height="40" src="{{ post.img | relative_url }}">
+              </div>
+              {% endif %}
+              <div class="uk-width-expand">
+                <h3 class="uk-card-title uk-margin-remove-bottom">{{ post.title }}</h3>
+                <p class="uk-text-meta uk-margin-remove-top">
+                  <time datetime="{{ post.date | date: "%F"}}">
+                    {{ post.date | date: "%Y" }} 年
+                    {{ post.date | date: "%-m" }} 月
+                    {{ post.date | date: "%-d" }} 日 
+                  </time>
+                </p>
+              </div>
+            </div>
+          </div>
+          {% if post.excerpt %}
+          <div class="uk-card-body">
+            {{ post.excerpt }}
+            <p class="uk-margin-remove uk-text-right uk-link-text">さらに詳しく...</p>
+          </div>
+          {% endif %}
         </div>
+        </a>
       </div>
-      {%- endfor -%}
+      {% endfor %}
     </div>
   </div>
 </div>
 
-
 <div class="uk-section">
   <div class="uk-container">
-    {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-    {%- endif -%}
+    <h2>CoderDojo Utsunomiya とは?</h2>
 
-    {{ content }}
-
-    {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-        {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
-
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-    {%- endif -%}
+    {%- for feature in page.features -%}
+    <h3 class="uk-heading-bullet">{{ feature.head }}</h3>
+    <div uk-grid>
+      <div class="uk-width-2-3@m">
+        {{ feature.desc | markdownify }}
+      </div>
+      <div class="uk-width-1-3@m">
+        {% if feature.img %}
+        <img src="{{ feature.img | relative_url }}">
+        {% endif %}
+      </div>
+    </div>
+    {%- endfor -%}
 
   </div>
 </div>
