--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,9 @@
-<div class="uk-section">
+<div class="uk-background-primary uk-light">
   <div class="uk-container">
-
-    <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-            {{ site.author | escape }}
-            {%- else -%}
-            {{ site.title | escape }}
-            {%- endif -%}
-          </li>
-          {%- if site.email -%}
-          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          {%- endif -%}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
+    <h2 class="uk-text-normal cd-logo">CoderDojo Utsunomiya</h2>
+    <div class="uk-text-center">
+      <p>Copyright(c) CoderDojo Utsunomiya.</p>
     </div>
-
   </div>
 </div>
 
