--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
-  <!-- <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> -->
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <script src="assets/uikit.min.js"></script>
   <script src="assets/uikit-icons.min.js"></script>
-  {%- feed_meta -%}
+  {% comment %} {%- feed_meta -%} {% endcomment %}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
