--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,58 +1,14 @@
-$global-medium-font-size: 1.25rem !default;
-$global-emphasis-color: #333 !default;
-$global-color: #666 !default;
-$global-inverse-color: #fff !default;
+$cd-purple: #642580;
+$cd-teal: #41BAC1;
+$cd-orange: #ED684A;
 
-$global-muted-background: #f8f8f8 !default;
+$global-background: #fff;
+$global-primary-background: $cd-purple;
+$global-secondary-background: $cd-teal;
 
-$global-background: #fff !default;
+$global-inverse-color: #fff;
+$inverse-global-color: rgba($global-inverse-color, 0.9);
 
-$global-primary-background: #642580 !default;
+$global-large-box-shadow: 0 14px 25px rgba(0,0,0,0.5);
 
-$global-secondary-background: #41BAC1 !default;
-
-$global-success-background: #32d296 !default;
-$global-warning-background: #faa05a !default;
-$global-danger-background: #f0506e !default;
-$global-xxlarge-font-size: 2.625rem !default;
-$global-small-font-size: 0.875rem !default;
-$global-muted-color: #999 !default;
-$global-font-family: -apple-system, blinkmacsystemfont, "segoe ui", roboto, "helvetica neue", arial, "noto sans", sans-serif, "apple color emoji", "segoe ui emoji", "segoe ui symbol", "noto color emoji" !default;
-$base-body-font-weight: normal !default;
-$global-font-size: 16px !default;
-$global-link-color: #1e87f0 !default;
-$global-link-hover-color: #0f6ecd !default;
-$base-strong-font-weight: bolder !default;
-$base-code-font-family: consolas, monaco, monospace !default;
-$base-ins-background: #ffd !default;
-$base-mark-background: #ffd !default;
-$base-quote-font-style: italic !default;
-$base-small-font-size: 80% !default;
-$base-heading-font-weight: normal !default;
-$global-xlarge-font-size: 2rem !default;
-$base-h2-line-height: 1.3 !default;
-$global-large-font-size: 1.5rem !default;
-$global-border: #e5e5e5 !default;
-$base-blockquote-font-style: italic !default;
-$base-selection-background: #39f !default;
-$countdown-number-font-size: 2rem !default;
-$countdown-number-font-size-s: 4rem !default;
-$countdown-number-font-size-m: 6rem !default;
-$countdown-separator-font-size: 1rem !default;
-$countdown-separator-font-size-s: 2rem !default;
-$countdown-separator-font-size-m: 3rem !default;
-$form-select-option-color: #444 !default;
-$heading-medium-font-size-l: 4rem !default;
-$heading-large-font-size-l: 6rem !default;
-$heading-xlarge-font-size-l: 8rem !default;
-$heading-2xlarge-font-size-l: 11rem !default;
-$heading-primary-font-size-l: 3.75rem !default;
-$heading-hero-font-size-l: 8rem !default;
-$lightbox-background: #000 !default;
-$lightbox-toolbar-icon-hover-color: #fff !default;
-$lightbox-button-hover-color: #fff !default;
-$table-header-cell-font-weight: bold !default;
-$table-row-active-background: #ffd !default;
-$tooltip-background: #666 !default;
-$tooltip-font-size: 12px !default;
-$box-shadow-bottom-background: #444 !default;
+$heading-bullet-border: $cd-purple;
