Change footer logo h3 to p

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="uk-background-primary uk-light">
   <div class="uk-container">
-    <h2 class="uk-text-normal cd-logo">CoderDojo Utsunomiya</h2>
+    <p class="uk-text-normal uk-heading-small uk-padding uk-padding-remove-bottom cd-logo"><a class="uk-link-reset" href="{{ "/" | relative_url }}">CoderDojo Utsunomiya</a></p>
     <div class="uk-text-center">
       <p>Copyright(c) CoderDojo Utsunomiya.</p>
     </div>
