--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-  <script src="assets/uikit.min.js"></script>
-  <script src="assets/uikit-icons.min.js"></script>
+  <script src="{{ "assets/uikit.min.js" | relative_url }}"></script>
+  <script src="{{ "assets/uikit-icons.min.js" | relative_url }}"></script>
   {% comment %} {%- feed_meta -%} {% endcomment %}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
