--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -23,6 +23,10 @@
 	background-color: $cd-teal;
 }
 
+@mixin hook-table(){
+	width: auto;
+}
+
 .cd-logo {
 	font-family: "League-Gothic", sans-serif !important;
 }
@@ -31,4 +35,22 @@
 	@extend .uk-heading-small;
 	@extend .uk-text-bold;
 	color: $global-inverse-color !important;
+}
+
+.cd-excerpt {
+	h1, h2, h3, h4, h5 {
+		@extend p;
+		background-color: $global-background;
+		transform: none;
+		padding: 0;
+		font-weight: bold;
+		font-size: $global-medium-font-size;
+		color: $global-color;
+		box-shadow: none;
+	}
+}
+
+table {
+	@extend .uk-table;
+	@extend .uk-table-striped;
 }
