Add social buttons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,13 @@
 <div class="uk-background-primary uk-light">
   <div class="uk-container">
-    <p class="uk-text-normal uk-heading-small uk-padding uk-padding-remove-bottom cd-logo"><a class="uk-link-reset" href="{{ "/" | relative_url }}">CoderDojo Utsunomiya</a></p>
+    <div class="uk-flex uk-flex-middle">
+    <div class="uk-flex-inline">
+      <p class="uk-text-normal uk-heading-small uk-padding uk-padding-remove-bottom cd-logo"><a class="uk-link-reset" href="{{ "/" | relative_url }}">CoderDojo Utsunomiya</a></p>
+    </div>
+    <div class="uk-flex-inline">
+      {% include social.html %}
+    </div>
+    </div>
     <div class="uk-text-center">
       <p>Copyright(c) CoderDojo Utsunomiya.</p>
     </div>
