Add tweet and like button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,7 @@ layout: default
       {{ page.date | date: "%-d" }} 日 
     </time>
   </p>
+  {% include share_button.html %}
 </div>
 
 <div class="uk-section">
