--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,5 +4,8 @@
   <body>
     {{ content }}
     {%- include footer.html -%}
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v6.0&appId=225403651982844&autoLogAppEvents=1"></script>
   </body>
 </html>
