--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,10 @@ layout: default
   </div>
 </div>
 
+  <div class="uk-container">
+    {% include share_button.html %}
+  </div>
+
 <div class="uk-section">
   <div class="uk-container">
     <h2>開催予定</h2>
