--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,8 @@ layout: default
 
             {% if post.dojo_fixed and post.dojo_url %}
             <a href="{{ post.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
-            {% elsif post.dojo_url %}
+            {% else %}
+            参加申込は後日オープン予定です。<br>
             <button class="uk-button uk-button-primary" disabled>参加申し込みはこちら</button>
             {% endif %}
 
