--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,10 +72,15 @@ layout: default
             <p>{{ post.excerpt}}</p>
             <p><a href="{{ post.url | relative_url }}">詳細...</a></p>
 
-            {% if post.dojo_fixed and post.dojo_url %}
+            {% if post.dojo_fixed and post.dojo_url and post.dojo_apply_closed != true %}
             <a href="{{ post.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
             {% else %}
-            参加申込は後日オープン予定です。<br>
+              {% if post.dojo_apply_closed %}
+                参加申し込みは終了しました。
+              {% else %}
+                参加申し込みは後日オープン予定です。
+              {% endif %}
+              <br>
             <button class="uk-button uk-button-primary" disabled>参加申し込みはこちら</button>
             {% endif %}
 
