Add space the above of share button on top page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,9 +23,11 @@ layout: default
   </div>
 </div>
 
+<div class="uk-section">
   <div class="uk-container">
     {% include share_button.html %}
   </div>
+</div>
 
 <div class="uk-section">
   <div class="uk-container">
