--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,19 +73,7 @@ layout: default
           <div class="uk-card-body">
             <p>{{ post.excerpt | markdownify }}</p>
             <p><a href="{{ post.url | relative_url }}">詳細...</a></p>
-
-            {% if post.dojo_fixed and post.dojo_url and post.dojo_apply_closed != true %}
-            <a href="{{ post.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
-            {% else %}
-              {% if post.dojo_apply_closed %}
-                参加申し込みは終了しました。
-              {% else %}
-                参加申し込みは後日オープン予定です。
-              {% endif %}
-              <br>
-            <button class="uk-button uk-button-primary" disabled>参加申し込みはこちら</button>
-            {% endif %}
-
+            {% include apply-button.html post = post %}
           </div>
         </div>
       </div>
